--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 
 :root {
     --yellow-theme-background-color: #1d1d1d;
-    --yellow-theme-main-color: #ffdd40;
+    /* --yellow-theme-main-color: #ffdd40; */
+    --yellow-theme-main-color: #40c9ff;
+
     --yellow-theme-sub-text-color: #ffffff;
     --yellow-theme-text-color: #fff;
     --yellow-theme-nav-background-color: #181818;
@@ -15,8 +17,9 @@ body.light-theme {
     --yellow-theme-background-color: #f9f9f9;
     --yellow-theme-text-color: #111;
     --yellow-theme-sub-text-color: #333;
-    --yellow-theme-main-color: #ffbb00;
+    /* --yellow-theme-main-color: #ffbb00; */
     --yellow-theme-nav-background-color: #ddd;
+    --yellow-theme-main-color: #007bff;
 }
 
 
@@ -37,7 +40,9 @@ html {
 
 body {
     background: var(--yellow-theme-background-color);
+    /* background: var(--yellow-theme-main-color); */
     height: 100%;
+
 }
 
 #root {
